--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <h1>My website</h1>
-<p>Ebitengine WASM games mirror:</p>
-<p><a href="https://cedriclikescode.github.io/twenty48/">2048 (Ebitengine example)</a></p>
+<p>My games playable online:</p>
+<p><a href="https://cedriclikescode.github.io/Robintris/">Robintris (Port of https://github.com/robinlavallee/tetris to Go)</a></p>
 </body>
 </html>
 
