--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>My website</h1>
 <p>My games playable online:</p>
 <p><a href="https://cedriclikescode.github.io/Robintris/">Robintris (Port of https://github.com/robinlavallee/tetris to Go)</a></p>
+<p><a href="https://cedriclikescode.github.io/CPS-test">CPS test</a></p>
 </body>
 </html>
 
